# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  deployment.yaml  docker-compose.yml  gunicorn_starter.sh  main.tf  outputs.tf  pyproject.toml  variables.tf
.github/workflows/: exercise7-pipeline.yaml  pipeline.yaml
ansible/: .gitignore  README.md  ansible.cfg
ansible/inventories/: hosts
ansible/playbooks/: main.yaml
ansible/playbooks/group_vars/workers/: vars.yaml
ansible/roles/install_prerequisites/tasks/: main.yaml
ansible/roles/setup_todo_app/handlers/: main.yaml
ansible/roles/setup_todo_app/tasks/: main.yaml
ansible/roles/setup_todo_app/templates/: .env.j2  todoapp.service.j2
documentation/: diagram.puml
tests/: test_app.py  test_view_model.py
todo_app/: app.py  flask_config.py  oauth_helpers.py  view_model.py
todo_app/data/: session_items.py  trello_items.py
todo_app/templates/: index.html  layout.html  view_card.html
